test_scores/negative_dimers/features/P25788.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P25788.pkl.xz